Fix backport issues